--- a/escolaJAC/requirements.txt
+++ b/escolaJAC/requirements.txt
@@ -19,6 +19,7 @@ Jinja2==3.1.6
 Mako==1.3.10
 MarkupSafe==3.0.2
 pillow==11.3.0
+psycopg2-binary==2.9.10
 python-dotenv==1.1.1
 SQLAlchemy==2.0.43
 typing_extensions==4.15.0
