--- a/escolaJAC/requirements.txt
+++ b/escolaJAC/requirements.txt
@@ -1,7 +1,9 @@
 alembic==1.16.5
 bcrypt==4.3.0
 blinker==1.9.0
+certifi==2025.8.3
 click==8.2.1
+cloudinary==1.44.1
 colorama==0.4.6
 dnspython==2.8.0
 email-validator==2.3.0
@@ -21,7 +23,9 @@ MarkupSafe==3.0.2
 pillow==11.3.0
 psycopg2-binary==2.9.10
 python-dotenv==1.1.1
+six==1.17.0
 SQLAlchemy==2.0.43
 typing_extensions==4.15.0
+urllib3==2.5.0
 Werkzeug==3.1.3
 WTForms==3.2.1
